# impulse-core

./: .gitignore  Cargo.toml  README.md  build.rs
embed/css/: style.css
resources/setup/: core_init.sql  core_schema.sql  user_schema.sql
src/: bridge.rs  error.rs  lib.rs  main.rs
src/application/: environment.rs  mod.rs
src/database/: core.rs  mod.rs  user.rs
src/environment/: mod.rs  resource.rs
src/model/: mod.rs  unit.rs  user.rs
src/util/: date_util.rs  mod.rs
src/view/: mod.rs
src/view/component/: mod.rs
src/view/screen/: mod.rs  welcome.rs
src/view/section/: mod.rs
tests/: database.rs  environment.rs  user.rs
tests/common/: mod.rs
tests/resources/setup/: core_init.sql  core_init_with_invalid_schema_version.sql  core_schema_with_missing_tables.sql  user_init.sql  user_init_with_invalid_schema_version.sql  user_init_with_invalid_version.sql  user_schema.sql  user_schema_with_missing_tables.sql
