[package]
name = "impulse-phm"
version = "0.1.0-dev"
edition = "2024"
authors = ["Joshua Goring"]
description = "Empowers users to own and manage their personal health information all in one place."
license = "GPL-3.0-or-later"


[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
rusqlite = {version = "0.37.0", features = ["bundled"]}
semver = "1.0.26"


[dev-dependencies]
tempfile = "3.21.0"
