[package]
name = "impulse-phm"
version = "0.1.0-dev"
edition = "2024"
authors = ["Joshua Goring"]
description = "Empowers users to own and manage their personal health information all in one place."
license = "GPL-3.0-or-later"


[dependencies]
flexi_logger = "0.31.7"
log = "0.4.28"
rusqlite = {version = "0.37.0", features = ["bundled", "time"]}
semver = "1.0.26"
time = {version = "0.3.43", features = ["formatting", "macros", "parsing"]}
# The current recommended way to use Vizia. Also, I'm okay with using any  
# bleeding edge features here.
vizia = {git = "https://github.com/vizia/vizia"}


[dev-dependencies]
tempfile = "3.21.0"
