[package]
name = "impulse-core"
version = "0.1.0"
edition = "2024"
authors = ["Joshua Goring"]
description = "The core library of Impulse Personal Health Manager (PHM)."
license = "GPL-3.0-or-later"


[dependencies]
cxx = "1.0"
flexi_logger = "0.31.7"
log = "0.4.28"
rusqlite = {version = "0.37.0", features = ["bundled", "time"]}
semver = "1.0.26"
time = {version = "0.3.43", features = ["formatting", "macros", "parsing"]}


[dev-dependencies]
tempfile = "3.21.0"
